# imgui-nanobind

./: .gitignore  .gitmodules  README.md  setup.py  test.py
imgui/: __init__.py
imgui/extension/: image_texture.py
src/: CMakeLists.txt  array.h  bind.cpp  imconfig_user.h  main.cpp  parse_api.py  parse_enums.py  parse_structs.py
src/bind-imgui/: api.cpp  api.hpp  api_auto.cpp  bind-imgui.hpp  common.hpp  enums.hpp  enums_auto.cpp  raw_ptr.hpp  types.cpp  types.hpp  types_auto.cpp  types_no_methods.cpp
src/bind-imgui/stl/: optional.h
src/parser/: __main__.py  api.py  enums.py  structs.py  utils.py
